[package]
name = "chess_bot"
version = "0.1.0"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { version = "0.4", features = ["serde", "alloc", "std", "clock"] }
uuid = {version = "0.8", features = ["serde", "v4"] }
bincode = "1.3.2"
serde_json = "1.0.64"
derive-new = "0.5"
async-channel = "1.6.1"


serenity = "0.10"
tokio = { version = "1.0.0", features = ["full", "tracing", "macros", "signal"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }

async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
httparse = "1.0"
time = "0.1"
once_cell = "1.5.2"

